feat: simple refactoring
